# Mimir

./: ._.vscode  ._make_log.txt  .dockerignore  .env.example  .gitignore  ADMIN_SETTINGS_AUDIT.md  AGENTS_API_TEST_GUIDE.md  ASGARD_IRIS_INTEGRATION_ANALYSIS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSE.md  DATA_PIPELINE_STATUS.md  DEPLOYMENT_READY.md  E2E_TEST_GUIDE.md  E2E_TEST_SUMMARY.md  FIX_CLINICAL_CALCULATOR_INGESTION.md  FIX_EMBED_CHUNKS_FAILED.md  FIX_GUIDELINE_BATCH_PIPELINE.md  IMPLEMENTATION_SUMMARY.md  INSURANCE_CLAIMS_PIPELINE.md  LICENSE  NEO4J_INTEGRATION_SUMMARY.md  PIPELINE_STATUS_SUMMARY.txt  PORTAL_TEST_GUIDE.md  RAG_PLAYGROUND_TEST_GUIDE.md  README.md  RELEASE_NOTES.md  SECURITY.md  SESSION_COMPLETION_2026_05_28.md  TESTING_GUIDE.md  TEST_EXECUTION_SUMMARY.md  VERSION.txt  WIKI_MANUAL.md  auto_create_sources.py  create_sources.py  create_sources_auth.py  create_sources_dropdown.py  create_sources_manual_login.py  create_web_sources.py  docker-compose.prod.yml  (+19 more)
refgraph-rs/: CLAUDE.md  Cargo.toml  EXAMPLE_TDD_EXTRACT.md  README.md  TDD_WORKFLOW.md
refgraph-rs/.refgraph-core-backup/src/: extract.rs  output.rs
refgraph-rs/crates/refgraph-cli/: Cargo.toml
refgraph-rs/crates/refgraph-core/: Cargo.toml
refgraph-rs/crates/refgraph-domains/: Cargo.toml
refgraph-rs/crates/refgraph-neo4j/: Cargo.toml
refgraph-rs/src/: extract.rs  graph.rs  lib.rs  main.rs  mimir.rs
ro-ai-bridge/: ._target  .dockerignore  .env.example  CHANGELOG.md  Cargo.toml  Cargo.toml.tmp  Dockerfile  README.md  bifrost_vars.env.example  fix_finish.rs  fix_status.rs  test-api.sh  test_insert.sql  test_orphans.sh  test_qa.sh
ro-ai-bridge/.sqlx/: query-0848b4b4202b7734b7b0918a68c29e8fb64fd1666015eb210f7bd2142ed20c00.json  query-1a15d2d6c928937c3803cad2c3c262812995186fec1222ebe264c5d3748551ef.json  query-2715b8b4259e155d85d9c47ae13d7438baeee50c56d952a6c5a470ede036e89a.json  query-2c21ca47c54be682ebc030ae603711dd779e94ba8a8a714d8547276b2250e11e.json  query-2e61cd30a6cd3e0937dd096b4f94493e8bcb8c10687d0f8c0592fe38ed956fa6.json  query-2f12541a6b99acf6d9e8f7ad13438df4ab92edcbfa01f38930aae63f1554b534.json  query-39246fa0a8a51be2d9604e5e7e63b32acfdaf39ffd7eb95be09ece57fb59c547.json  query-568e0acdcad92822a6eb537c95e9895c6ee4a1b9c468c5145e353e3424c74c4e.json  query-5b9808cdbc4c7cba0947172aa9a8444b018ea2ec7a7fd7d16e81936e49216f38.json  query-665f2bc8fc31e7d19217dccd13d22c94fb47b481f955c49de3502cbed385fa12.json  query-6dc6c5669a7dd3006001b289b6279850d01801d7e9e3d6ebae033230cbdc6941.json  query-7167fb3b36d0ebe820f8c45b669599b10a2bc9d0cf32ff2be422e12d6f0ec241.json  query-7620e4a648ffcf937c13bc31d814bdc97431e6adc909abb8acfd2dc2f3c74de8.json  query-87ec8413e9a529e09a4215e43e76b7fd92e47167f2cf4744174a6bca97e336c3.json  query-8a32514355018b76cd42ba942b5122c5238edcd2101f501c7cd5288d8e58bd39.json  query-91d0e63b3d03d3907ae7d78f550b374b199b5e0f5b1dea96b8fc38ceed33f899.json  query-aee4d3fb76e625b450be4665a810cfd4551be4c46f879db0fad10a7144b0363b.json  query-b3275013f7ed22a3e6cd1547489ebfcf4416db041b71965a5cedf5d4f9fd2a9d.json  query-ba4bc88594a3965c27a496594a90c6e874e7a549208ba7edb01fa2d8bf4bd491.json  query-ba75548acf7a3bd3548b32bce7ef0994bdbc4f1444b0042514d4a709d6df3c24.json  query-bca0e47f8d4d7b2d72eea30d301ef6ff6a2223537be75ebe7d534d909c3d6b91.json  query-c13bb2b6641868d323b69d8877216bf367069c57a4e75d1c19556c5feaf5c91a.json  query-c29185b5ba38ac6ba44a68b1ab1d11d3087599f98374a7f6cac27603481147e8.json  query-d32e01cc81279b80c7dad4e07e54bbe71d27d1af957182c3c0e6f24802d21a26.json  query-da50eae6eac676b24342582f7ad2f9c6dcd3580bddd3047ef315d551f7449700.json  query-ded1dbbfe1a75b3891311bdbe9c894ffde4ff636f6b06b5bb11c55e16b27f266.json  query-e0b6ee7934122387e2f2569a7e289d309f782087dd9735ce6c66e7b399f7fa41.json  query-e3327581151ca8b44ecad9f1516e908862d19e57599d3f16cc8aa20442943338.json
ro-ai-bridge/config/personas/: Mimir.yaml  blacksmith.yaml  fortune_teller.yaml  sage_ariel.yaml
ro-ai-bridge/docs/: iso_network_architecture.md  security_scan_sprint31.md
ro-ai-bridge/hash_gen/: Cargo.toml
ro-ai-bridge/hash_gen/src/: main.rs
ro-ai-bridge/migrations/: 202602180000_init_mariadb.sql  202602190000_ai_tables.sql  202602191000_add_model_configs.sql  202602200000_eval_system.sql  20260516000001_placeholder.sql  sprint32_rag_benchmark.sql  sprint33_flashmoe_model.sql  sprint34_rig_plus_checkpoints.sql  sprint35_auto_tuner.sql  sprint36_eir_cot_tune.sql  sprint36_rerank_per_model.sql  sprint38_specialty_agents.sql  sprint39_curator_and_lora.sql  sprint39_multi_tag.sql  sprint40_multi_benchmark.sql  sprint47_rag_eval.sql  sprint48_c3_insurance_chunk_size.sql  sprint48_icd10_codes.sql  sprint49_loinc_codes.sql  sprint50_curator_review.sql  sprint50_eir_ocr_allowlist.sql  sprint50_syn_skuggi_foundation.sql  sprint50_tmt_codes.sql  sprint51_eval_champion_tracking.sql  sprint51_tmlt_codes.sql  sprint52_eval_wave1_columns.sql  sprint52_tpc_codes.sql  sprint53_ocr_eval_schema.sql  sprint53_ocr_layout_eval_schema.sql  sprint54_snomed_icd10_map.sql  sprint55_rxnorm_crosswalk.sql  sprint55_snomed_mondo_map.sql  sprint56_mimir_well_neo4j.cypher  sprint56_mimir_well_schema.sql  sprint57_medical_abbrev.sql  sprint57_ocr_regions_json.sql  sprint58_snomed_refsets_edqm.sql  sprint60_snomed_icd10_extmap.sql  sprint60_snomed_icd10cm_map.sql  wave4b_pubmed_cronjob.sql
ro-ai-bridge/migrations-pg/: 20260501000000_medical_schema.sql
ro-ai-bridge/migrations/neo4j/: primekg_meta.cypher
ro-ai-bridge/mimir-core-ai/: Cargo.toml
ro-ai-bridge/mimir-fhir/: Cargo.toml  README.md  SPEC.md
ro-ai-bridge/mimir-geo/: Cargo.toml  README.md
ro-ai-bridge/mimir-lab/: Cargo.toml  Dockerfile  README.md
ro-ai-bridge/mimir-text-metrics/: Cargo.toml
ro-ai-bridge/mimir-well/: Cargo.toml
ro-ai-bridge/ro-ai-domain-game/: Cargo.toml
ro-ai-bridge/ro-ai-domain-medical/: Cargo.toml
ro-ai-bridge/scripts/: eval_unify_backfill.sql  eval_unify_backup.sh  migrate_rollback.sh
ro-ai-bridge/skuggi-core/: Cargo.toml
ro-ai-bridge/src/: config.rs  lib.rs  main.rs  tmp_test.rs
ro-ai-bridge/tests/: agents_endpoint.rs  tenant_api_tests.rs
(+1204 files in other folders)
