[package]
name = "refgraph"
version = "0.1.0"
edition = "2021"
authors = ["Asgard Team <paripol@megawiz.co>"]
description = "RefGraph: Multi-domain data consolidation engine for Asgard RAG"
license = "AGPL-3.0-or-later"
repository = "https://github.com/megawiz/Mimir"

[lib]
name = "refgraph"
path = "src/lib.rs"

[[bin]]
name = "refgraph"
path = "src/main.rs"

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

# Database
neo4rs = "0.8"

# Algorithms & Data Structures
itertools = "0.12"
hashbrown = "0.14"

# HTTP & API
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }
axum = "0.7"

# Text Processing
unicode-normalization = "0.1"
regex = "1.10"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Testing & Validation
validator = { version = "0.16", features = ["derive"] }

# Performance
rayon = "1.7"
parking_lot = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
