[workspace]
members = [
    "crates/refgraph-core",
    "crates/refgraph-neo4j",
    "crates/refgraph-domains",
    "crates/refgraph-cli",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio          = { version = "1.49", features = ["full"] }

# Serialization
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
toml           = "1.1"

# Database
neo4rs         = "0.8"

# Traits
async-trait    = "0.1"

# Error handling
thiserror      = "2.0"
anyhow         = "1.0"

# HTTP & networking
reqwest        = { version = "0.13", features = ["json", "rustls-tls"] }
url            = "2.5"

# Text processing
unicode-normalization = "0.1"
regex          = "1.10"
scraper        = "0.27"

# Logging
tracing        = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Algorithms & data structures
itertools      = "0.14"
hashbrown      = "0.15"
rayon          = "1.10"

# Time
chrono         = { version = "0.4", features = ["serde"] }

# IDs
uuid           = { version = "1.23", features = ["v4", "serde"] }

# Hashing
sha2           = "0.10"

# CLI
clap           = { version = "4.6", features = ["derive"] }

[workspace.lints.clippy]
all = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
