[workspace]
members = [
    "crates/refgraph-neo4j",
]
resolver = "2"

[workspace.dependencies]
tokio          = { version = "1.36", features = ["full"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
neo4rs         = "0.7"
async-trait    = "0.1"
thiserror      = "1.0"
anyhow         = "1.0"
url            = "2.5"
tracing        = "0.1"
chrono         = { version = "0.4", features = ["serde"] }
uuid           = { version = "1.6", features = ["v4", "serde"] }
refgraph-core  = "0.1"
clap           = { version = "4.4", features = ["derive"] }
regex          = "1.10"
rand           = "0.8"
