[package]
name = "ro-ai-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.39", features = ["serde"] }
axum = "0.8.8"
chromiumoxide = "0.8.0"
dotenvy = "0.15.7"
futures = "0.3.32"
html2md = "0.2.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
reqwest-eventsource = "0.6.0"
rig-core = "0.10.0"
schemars = "0.8"
scraper = "0.25.0"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10.0"
tower-http = { version = "0.6.8", features = ["cors"] }
