[package]
name = "ro-ai-bridge"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "mimir-core-ai",
    "ro-ai-domain-game"
]
resolver = "2"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
chromiumoxide = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
html2md = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
rig-core = { workspace = true }
schemars = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
tower-http = { workspace = true }
async-trait = "0.1.89"
mimir-core-ai = { version = "0.1.0", path = "mimir-core-ai" }
ro-ai-domain-game = { version = "0.1.0", path = "ro-ai-domain-game" }

[workspace.dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.39", features = ["serde"] }
axum = "0.8.8"
argon2 = "0.5.3"
password-hash = "0.5.0"
chromiumoxide = "0.8.0"
dotenvy = "0.15.7"
futures = "0.3.32"
html2md = "0.2.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
reqwest-eventsource = "0.6.0"
rig-core = "0.10.0"
schemars = "0.8"
scraper = "0.25.0"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.44"
jsonwebtoken = "9.3.0"
tracing-subscriber = "0.3.22"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10.0"
tower-http = { version = "0.6.8", features = ["cors"] }
