[package]
name = "mimir-core-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
chromiumoxide = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
jsonwebtoken = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
rig-core = { workspace = true }
schemars = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1.89"
serde_urlencoded = "0.7.1"
