# mimir-geo — Asgard Analytics spatial engine (ADR-024, P4).
# Own [workspace] root (like mimir-lab / mimir-fhir) so the heavy bundled-DuckDB
# build with the spatial extension is isolated from the main ro-ai-bridge workspace.
[workspace]

[package]
name = "mimir-geo"
version = "0.1.0"
edition = "2021"
description = "Asgard Analytics spatial engine — GeoRust + DuckDB spatial + H3, with sandboxed-Python spatial statistics"
license = "AGPL-3.0-only OR LicenseRef-Commercial"

[dependencies]
# DuckDB with the `spatial` extension (ST_* ops, GeoJSON/Shapefile read via ST_Read).
# `bundled` compiles libduckdb from source — no system dep, self-contained on-prem.
# Reuses the same engine pattern as mimir-lab (read-only guard, row-cap, Tyr audit).
duckdb = { version = "1.10503", features = ["bundled"] }
# GeoRust — pure-Rust geometry types + algorithms (buffer/distance/centroid) for
# the ops we'd rather not push into SQL.
geo = "0.28"
geo-types = "0.7"
geojson = "0.24"
# Uber H3 hexagonal grid (pure Rust) — lat/lng → cell, k-ring, polyfill, boundary.
h3o = "0.7"
# Dataset registry reuse (MariaDB) — same as mimir-lab; geo datasets share the
# `analytics_datasets` table with a `geometry_column` + `srid` extension.
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
# Sandboxed-Python spatial-stats IO (temp request/response files).
tempfile = "3"

[dev-dependencies]
# TDD with fixture geometries (a few WKT/GeoJSON points + polygons).
