# mimir-geo — Asgard Analytics spatial engine (ADR-024, P4).
# Own [workspace] root (like mimir-lab / mimir-fhir).
#
# NOTE (deviation from ADR-024's "DuckDB spatial"): the DuckDB `spatial` extension
# must be INSTALLed from the network at runtime (not bundled) → unavailable on the
# offline on-prem box. So geometry is done in **pure Rust (GeoRust + h3o)** — also
# the Rust-first choice. Tabular DuckDB stays in mimir-lab. Spatial stats (Moran's I,
# nearest-neighbour) are implemented in Rust too; the Python/PySAL sandbox (kriging,
# LISA) is the escape hatch, deferred until wheels can be vendored offline.
[workspace]

[package]
name = "mimir-geo"
version = "0.1.0"
edition = "2021"
description = "Asgard Analytics spatial engine — GeoRust geometry + H3 + spatial statistics (pure Rust, offline)"
license = "AGPL-3.0-only OR LicenseRef-Commercial"

[dependencies]
# GeoRust — pure-Rust geometry types + algorithms (distance, contains).
geo = "0.29"
geo-types = "0.7"
# GeoJSON parse + conversion to geo-types.
geojson = { version = "0.24", features = ["geo-types"] }
# Uber H3 hexagonal grid (pure Rust) — lat/lng → cell, k-ring, boundary, polyfill.
h3o = { version = "0.7", features = ["geo"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
