# mimir-lab — Asgard Analytics data engine (ADR-024).
# Own [workspace] root (like mimir-fhir) so the heavy bundled-DuckDB build is
# isolated from the main ro-ai-bridge workspace.
[workspace]

[package]
name = "mimir-lab"
version = "0.1.0"
edition = "2021"
description = "Asgard Analytics data engine — dataset ingest + schema inference + DuckDB query, with Skuggi PII gating"
license = "AGPL-3.0-only OR LicenseRef-Commercial"

[dependencies]
# DuckDB embedded OLAP engine. `bundled` compiles libduckdb from source — no
# system dependency, self-contained for on-prem boxes (heavy first build).
duckdb = { version = "1.10503", features = ["bundled"] }
# Tier-1 PII gate (engine + builtin rules); shared with Heimdall/Mimir.
skuggi-core = { version = "0.2", path = "../skuggi-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
