# mimir-lab — Asgard Analytics data engine (ADR-024).
# Own [workspace] root (like mimir-fhir) so the heavy bundled-DuckDB build is
# isolated from the main ro-ai-bridge workspace.
[workspace]

[package]
name = "mimir-lab"
version = "0.1.2"
edition = "2021"
description = "Asgard Analytics data engine — dataset ingest + schema inference + DuckDB query, with Skuggi PII gating"
license = "AGPL-3.0-only OR LicenseRef-Commercial"

[dependencies]
# DuckDB embedded OLAP engine. `bundled` compiles libduckdb from source — no
# system dependency, self-contained for on-prem boxes (heavy first build).
duckdb = { version = "1.10503", features = ["bundled"] }
# Tier-1 PII gate (engine + builtin rules); shared with Heimdall/Mimir.
skuggi-core = { version = "0.2", path = "../skuggi-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
# Relational dataset registry (MariaDB). Runtime queries (no compile-time
# DATABASE_URL dependency). Matches the ro-ai-bridge workspace sqlx version.
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql"] }
uuid = { version = "1", features = ["v4"] }
# MinIO/S3 blob storage (matches ro-ai-bridge workspace rust-s3 version).
rust-s3 = "0.35"
# Audit emission (Tyr-ingestible structured events) + active HTTP forward to Tyr.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "net", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4"
# analytics-api HTTP server (the backend behind Hermodr's analytics MCP tools).
axum = "0.8"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[[bin]]
name = "analytics-api"
path = "src/bin/analytics_api.rs"
