[package]
name = "ro-ai-domain-medical"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait = "0.1.89"
mimir-core-ai = { version = "0.1.0", path = "../mimir-core-ai" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
gcp-bigquery-client = "0.19.0"
