[package]
name = "skuggi-core"
version = "0.1.0"
edition = "2021"
description = "🌑 Skuggi — shared Tier 1 PII regex detectors + scoring (Heimdall redaction + Mimir leak-detection + runner)"
license = "AGPL-3.0-only OR LicenseRef-Commercial"

[dependencies]
once_cell = "1.19"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
