[package]
name = "refgraph-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for RefGraph consolidation pipeline"
license = "AGPL-3.0-only OR LicenseRef-Commercial"
authors = ["RefGraph Contributors"]
repository = "https://github.com/refgraph-rs/refgraph"
publish = false

[dependencies]
refgraph-core = { path = "../refgraph-core" }
tokio          = { workspace = true }
clap           = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow         = { workspace = true }

[[bin]]
name = "refgraph"
path = "src/main.rs"
