[package]
name = "refgraph-core"
version = "0.1.0"
edition = "2021"
description = "RefGraph: Multi-domain semantic entity graph consolidation engine"
license = "AGPL-3.0-only OR LicenseRef-Commercial"
authors = ["RefGraph Contributors"]
repository = "https://github.com/refgraph-rs/refgraph"
readme = "../../README.md"
keywords = ["semantic-graph", "consolidation", "entity-extraction", "deduplication", "neo4j"]
categories = ["database", "web-programming"]

[dependencies]
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
toml           = { workspace = true }
async-trait    = { workspace = true }
thiserror      = { workspace = true }
anyhow         = { workspace = true }
url            = { workspace = true }
unicode-normalization = { workspace = true }
regex          = { workspace = true }
tracing        = { workspace = true }
itertools      = { workspace = true }
hashbrown      = { workspace = true }
rayon          = { workspace = true }
chrono         = { workspace = true }
uuid           = { workspace = true }
sha2           = { workspace = true }

[dev-dependencies]
tokio-test    = "0.4"
tempfile      = "3.8"

[lib]
name = "refgraph_core"
path = "src/lib.rs"
